--- a/styly.CSS
+++ b/styly.CSS
@@ -37,10 +37,29 @@
 
 .nost {
     margin: 1%;
-    background-color: aqua;
-    width: 100%;
+    background-color:rgb(238,242,255);
+    width: 85%;
     display: flex;
     justify-content: center;
     padding: 4%;
-  border-radius: 15%;
+  border-radius: 10%;
+ margin-left: 3%;
+ margin-right: 3%;
+}
+.kon{
+    display: flex;
+    flex-direction: column;
+    margin-left: 3%;
+    margin-top: 3%;
+}
+a {
+  color: blue;        
+  text-decoration: none; 
+}
+
+a:hover {
+  text-decoration: underline; 
+}
+p {
+  line-height: 24px;
 }
