--- a/styly.CSS
+++ b/styly.CSS
@@ -5,14 +5,16 @@
 .nadpis {
     color: rgb(79, 70, 229);
     padding-left: 3%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: ui-sans-serif,sans-serif;
 }
 
 .nvm {
     color: rgb(99, 102, 241);
     padding-top: 4%;
     padding-left: 3%;
+    font-family: ui-sans-serif,sans-serif;
 
 }
 
@@ -20,19 +22,28 @@
     padding-left: 3%;
     margin-top: 1%;
     margin-bottom: 1%;
+    font-family: ui-sans-serif,sans-serif;
+    color: rgb(31,41,55);
+    justify-content: center;
 }
 
 .pn {
     padding-left: 3%;
     margin-top: 1%;
     margin-bottom: 1%;
+    font-family: ui-sans-serif,sans-serif;
+     color: rgb(31,41,55);
+       justify-content: center;
 }
+
 
 .dov {
     display: flex;
     justify-content: center;
     align-items: center;    
     flex-direction: column;
+    font-family: ui-sans-serif,sans-serif;
+     color: rgb(31,41,55);
 }
 
 .nost {
@@ -45,16 +56,22 @@
   border-radius: 10%;
  margin-left: 3%;
  margin-right: 3%;
+ font-family: ui-sans-serif,sans-serif;
+  color: rgb(31,41,55);
 }
 .kon{
     display: flex;
     flex-direction: column;
     margin-left: 3%;
     margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: ui-sans-serif,sans-serif;
+     color: rgb(31,41,55);
 }
 a {
   color: blue;        
   text-decoration: none; 
+  font-family: ui-sans-serif,sans-serif;
 }
 
 a:hover {
@@ -62,4 +79,18 @@ a:hover {
 }
 p {
   line-height: 24px;
+  
+}
+.md{
+    display: flex;
+    width: 30%;
+    border-radius: 100%;
+}
+.box{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    margin: 10%;
+    font-family: ui-sans-serif,sans-serif;
+     color: rgb(31,41,55);
 }
