--- a/styly.CSS
+++ b/styly.CSS
@@ -99,6 +99,13 @@ p {
   margin-top: 3%;
   margin-bottom: 3%;
 }
+.md{
+  size: 0ch;
+ 
+}
+.pic{
+  width: 0ch;
+}
 @media (min-width: 1024px) {  
   
   .dov {
@@ -142,5 +149,8 @@ p {
   }
   .kon{
     font-size: 3ch;
+  }
+  .nad{
+    flex-direction: row;
   }
 }
